MOBILE A TAG NOT SHOWING LIKE THE DESIGN FIX

--- a/mobile.css
+++ b/mobile.css
@@ -545,7 +545,7 @@ form {
   margin: 10px;
 }
 
-.butt a {
+a {
   text-decoration: none;
   color: #fff;
 }
